re PR middle-end/34688 ([4.1/4.2] ICE: output_operand: invalid expression as operand)

PR middle-end/34688
	* final.c (output_addr_const): Handle TRUNCATE.

	* gcc.c-torture/compile/pr34688: New test.

From-SVN: r131878